# spdlog-issue-2114

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yml  main.cpp
.devcontainer/: devcontainer.json  docker-compose.yml
docker/gcc/: Dockerfile
