cmake_minimum_required(VERSION 3.12.0)
project(spdlog_issue_2114 VERSION 0.1.0)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(SPDLOG_BUILD_SHARED OFF CACHE BOOL "")
set(SPDLOG_BUILD_EXAMPLE OFF CACHE BOOL "")
set(SPDLOG_BUILD_EXAMPLE_HO OFF CACHE BOOL "")
set(SPDLOG_BUILD_TESTS OFF CACHE BOOL "")
set(SPDLOG_BUILD_TESTS_HO OFF CACHE BOOL "")
set(SPDLOG_BUILD_BENCH OFF CACHE BOOL "")
set(SPDLOG_SANITIZE_ADDRESS OFF CACHE BOOL "")
set(SPDLOG_INSTALL OFF CACHE BOOL "")
set(SPDLOG_FMT_EXTERNAL OFF CACHE BOOL "")
set(SPDLOG_FMT_EXTERNAL_HO OFF CACHE BOOL "")
set(SPDLOG_NO_EXCEPTIONS OFF CACHE BOOL "")
add_subdirectory(thirdparty/spdlog)

add_executable(spdlog_issue_2114 main.cpp)
target_link_libraries(spdlog_issue_2114
    PUBLIC
        spdlog::spdlog_header_only)
